--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,82 @@
-/* werkt nog niet */
-#logo{
+* {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#logo {
   height: 50px;
   width: auto;
+}
+
+.header {
+  background-color: #00263D;
+  height: 60vh;
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 20%;
+  position: relative; /* Toegevoegd */
+  z-index: -1;
+}
+
+.line1,
+.line2 {
+  position: absolute; /* Toegevoegd */
+  width: 100%; /* Toegevoegd */
+  height: 7px;
+  margin: 5px 0;
+  z-index: 0;
+}
+
+.line1 {
+  background-color: #93ACC2; /* Kleur van de eerste lijn */
+  top: 58px; /* Plaats de eerste lijn bovenaan de header */
+}
+
+.line2 {
+  background-color: #F6F6F6; /* Kleur van de tweede lijn */
+  top: 75px; /* Plaats de tweede lijn onderaan de header */
+}
+
+.header_icons {
+  margin-top: 150px;
+  text-decoration: none;
+}
+
+.header_icons h3 {
+  text-align: center;
+  text-decoration: none;
+  color: #F6F6F6;
+}
+
+.header_icon {
+  padding: 20px;
+  background-color: #CBB391;
+  border-radius: 40px;
+}
+
+h1 {
+  text-align: center;
+  color: #B95927;
 }
 
 #slider-container {
   position: relative;
   overflow: hidden;
-  width: 1000px; /* Pas dit aan aan je eigen wensen */
+  width: 1250px;
   margin: 0 auto;
 }
 
 #slide {
   position: relative;
-  width: 100%; /* Maak de slide container 100% breedte */
+  width: 100%;
 }
 
 #slide img {
-  width: auto; /* Laat de breedte automatisch schalen om de verhoudingen te behouden */
-  height: 600px; /* Geef een vaste hoogte aan de afbeelding */
-  object-fit: cover; /* Behoud de verhoudingen van de afbeelding en knip indien nodig bij */
-  object-position: center; /* Centreer de afbeelding in de container */
+  width: 1250px;
+  height: 600px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .slider-text {
@@ -28,11 +84,10 @@
   bottom: -35px;
   left: 0;
   width: 100%;
-  /* background-color: rgba(0, 0, 0, 0.5); */
   color: black;
   padding: 5px 0;
   margin: 0;
-  box-sizing: border-box; /* Voeg deze regel toe */
+  box-sizing: border-box;
 }
 
 .slider-text h2 {
@@ -41,7 +96,7 @@
 
 #slider-nav {
   margin-top: 35px;
-  margin-left: 40%;
+  margin-left: 45%;
 }
 
 .slider-dot {
@@ -50,10 +105,14 @@
   height: 10px;
   background-color: #ccc;
   border-radius: 50%;
-  margin: 0 5px;
+  margin: 0 5px 25px 5px;
   cursor: pointer;
 }
 
 .slider-dot.active {
   background-color: #333;
+}
+
+p footer {
+  text-align: center;
 }
