--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 .header {
   background-color: #00263D;
-  height: 60vh;
+  height: 65vh;
   display: flex;
   justify-content: space-around;
   padding: 0px 20%;
@@ -39,7 +39,7 @@
 }
 
 .header_icons {
-  margin-top: 150px;
+  margin-top: 165px;
   text-decoration: none;
 }
 
@@ -53,6 +53,83 @@
   padding: 20px;
   background-color: #CBB391;
   border-radius: 40px;
+}
+
+
+.chat-container {
+  width: 300px;
+  margin: 20px auto;
+  background-color: #93ACC2;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 350px;
+  right: 20px;
+}
+
+.chat-header {
+  background-color: #93ACC2;
+  color: #00263D;
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-header svg {
+  margin-right: -75px;
+  margin-left: 25px;
+  cursor: pointer;
+  /* Toegevoegd om een cursor te tonen wanneer je erop klikt */
+}
+
+.chat-messages {
+  padding: 0 10px;
+  overflow-y: auto;
+  max-height: 200px;
+  /* Aangepaste hoogte voor de berichten */
+}
+
+.message {
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+  max-width: 80%;
+  background-color: #F6F6F6;
+  
+}
+
+.user-message {
+  background-color: #F6F6F6;
+  float: right;
+}
+
+.bot-message {
+  background-color: #F6F6F6;
+  float: left;
+}
+
+.chat-input-container {
+  display: flex;
+  border-top: 1px solid #ddd;
+}
+
+.chat-input {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  outline: none;
+}
+
+.send-icon {
+  padding: 10px;
+  background-color: #93ACC2;
+  color: #00263D;
+  cursor: pointer;
 }
 
 h1 {
