--- a/styles/general.css
+++ b/styles/general.css
@@ -11,7 +11,6 @@
 .navbar a {
     color: #00263D;
     text-decoration: none;
-    text-transform: uppercase;
     font-size: 14px;
     font-weight: 400;
     font-family: "neue-haas-grotesk-text", sans-serif;
@@ -121,12 +120,18 @@ input{
 .logos a{
     margin-right: 20px;
 }
+p{
+    font-weight: 400;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-style: normal;
+}
 
 .end{
     text-align: center;
     font-size: 16px;
     color: #00263D ;
     padding-top: -20px;
+    padding-bottom: 10px;
 
     font-weight: 400;
     font-family: "neue-haas-grotesk-text", sans-serif;
