--- a/styles/header.css
+++ b/styles/header.css
@@ -1,18 +1,20 @@
+@import url("https://use.typekit.net/vzx3eow.css");
+
 .header {
     background-color: #00263D;
-    height: 40vh;
+    height: 32vh;
     display: flex;
     justify-content: space-around;
     padding: 0px 20%;
-    position: relative; /* Toegevoegd */
+    position: relative; 
   
     
   }
   
   .line1,
   .line2 {
-    position: absolute; /* Toegevoegd */
-    width: 100%; /* Toegevoegd */
+    position: absolute; 
+    width: 100%;
     height: 7px;
     margin: 18px 0;
     z-index: 0;
@@ -39,7 +41,9 @@
   
   .header_icons h3 {
     text-align: center;
-   
+    font-weight: 400;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-style: normal;
     color: #F6F6F6;
     margin-top: 10px;
   }
@@ -102,7 +106,7 @@
   
   
   .chat-container {
-    width: 300px;
+    width: 200px;
     margin: 20px auto;
     background-color: #93ACC2;
     border-radius: 10px;
@@ -122,20 +126,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 400;
+    font-family: "neue-haas-grotesk-text", sans-serif;
+    font-style: normal;
   }
   
   .chat-header svg {
     margin-right: -75px;
     margin-left: 25px;
     cursor: pointer;
-    /* Toegevoegd om een cursor te tonen wanneer je erop klikt */
+   
   }
   
   .chat-messages {
     padding: 0 10px;
     overflow-y: auto;
     max-height: 200px;
-    /* Aangepaste hoogte voor de berichten */
+   
   }
   
   .message {
