--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
+@import url("https://use.typekit.net/vzx3eow.css");
 * {
-  font-family: sans-serif;
+
   margin: 0;
   padding: 0;
 }
@@ -14,6 +15,9 @@
 h1 {
   text-align: center;
   color: #B95927;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
 }
 
 #slider-container {
@@ -69,7 +73,5 @@ h1 {
   background-color: #333;
 }
 
-p footer {
-  text-align: center;
-}
+
 
