profiel + content politiek, economie, gezondheid, klimaat uit database (like nog niet), profielfoto bij inlog( nog niet helemaal in orde) + slider responsive

--- a/styles/general.css
+++ b/styles/general.css
@@ -80,7 +80,8 @@ p{
 }
 input{
     border: none !important;
-    background-color: #93ACC2;
+    /* background-color: #93ACC2; */
+    background-color: #F6F6F6;
     color: white;
 }
 
