--- a/styles/header.css
+++ b/styles/header.css
@@ -1,257 +1,240 @@
 @import url("https://use.typekit.net/vzx3eow.css");
 
 .header {
-    background-color: #00263D;
-    height: 32vh;
-    display: flex;
-    justify-content: space-around;
-    padding: 0px 20%;
-    position: relative; 
-  
-    
-  }
-  
-  .line1,
-  .line2 {
-    position: absolute; 
-    width: 100%;
-    height: 7px;
-    margin: 18px 0;
-    z-index: 0;
-  }
-  
-  .line1 {
-    background-color: #93ACC2; 
-    top: 75px;
-    z-index: 2;
-  }
-  
-  .line2 {
-    background-color: #F6F6F6; 
-    top: 90px;
-    z-index: 2;
-  }
-  
-  .flex{
+  background-color: #00263d;
+  height: 32vh;
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 20%;
+  position: relative;
+}
+
+.line1,
+.line2 {
+  position: absolute;
+  width: 100%;
+  height: 7px;
+  margin: 18px 0;
+  z-index: 0;
+}
+
+.line1 {
+  background-color: #93acc2;
+  top: 75px;
+  z-index: 2;
+}
+
+.line2 {
+  background-color: #f6f6f6;
+  top: 90px;
+  z-index: 2;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-left: -70px;
+}
+
+.header_icons h3 {
+  text-align: center;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+  color: #f6f6f6;
+  margin-top: 10px;
+}
+
+.politiek {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.economie {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.gezondheid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.klimaat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.header_icon:hover {
+  background-color: #93acc2;
+}
+
+.header_icons {
+  margin-top: 95px;
+  text-decoration: none;
+}
+
+.header_icon {
+  width: 60px;
+  height: 60px;
+}
+
+.header_icon {
+  padding: 10px;
+  background-color: #cbb391;
+  border-radius: 25px;
+}
+
+.chat-container {
+  width: 200px;
+  margin: 20px auto;
+  background-color: #93acc2;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 290px;
+  right: 20px;
+}
+
+.chat-header {
+  background-color: #93acc2;
+  color: #00263d;
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+}
+
+.chat-header svg {
+  margin-right: -75px;
+  margin-left: 25px;
+  cursor: pointer;
+}
+
+.chat-messages {
+  padding: 0 10px;
+  overflow-y: auto;
+  max-height: 200px;
+}
+
+.message {
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: inline-block;
+  max-width: 80%;
+  background-color: #f6f6f6;
+}
+
+.user-message {
+  background-color: #f6f6f6;
+  float: right;
+}
+
+.bot-message {
+  background-color: #f6f6f6;
+  float: left;
+}
+
+.chat-input-container {
+  display: flex;
+  border-top: 1px solid #ddd;
+}
+
+.chat-input {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: 16px;
+}
+
+.send-icon {
+  padding: 10px;
+  background-color: #93acc2;
+  color: #00263d;
+  cursor: pointer;
+}
+
+@media (min-width: 600px) {
+  .flex {
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    margin-left: -70px;
+    gap: 60px;
+    margin-left: -40px;
+    /* margin: 0 auto; */
   }
-  
-  .header_icons h3 {
-    text-align: center;
-    font-weight: 400;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: normal;
-    color: #F6F6F6;
-    margin-top: 10px;
-  }
-  
-  
-  
-  .politiek {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-  
-  }
-  
-  
-  .economie{
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-  
-  }
-  
-  .gezondheid{
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center; 
-  
-  }
-  
-  .klimaat{
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    text-align: center;
-  
-  }
-  .header_icon:hover{
-    background-color: #93ACC2;
-  }
-  
+
   .header_icons {
     margin-top: 95px;
     text-decoration: none;
-    
   }
-  
+
   .header_icon {
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
   }
-  
+
   .header_icon {
-    padding: 10px;
-    background-color: #CBB391;
+    padding: 15px;
+    background-color: #cbb391;
     border-radius: 25px;
   }
-  
-  
-  
-  .chat-container {
-    width: 200px;
-    margin: 20px auto;
-    background-color: #93ACC2;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 290px;
-    right: 20px;
-  }
-  
-  .chat-header {
-    background-color: #93ACC2;
-    color: #00263D;
-    padding: 5px 10px;
+
+  .header_icons h3 {
     text-align: center;
-    font-size: 18px;
+    text-decoration: none;
+    color: #f6f6f6;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .flex {
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    gap: 110px;
     justify-content: center;
-    font-weight: 400;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: normal;
-  }
-  
-  .chat-header svg {
-    margin-right: -75px;
-    margin-left: 25px;
-    cursor: pointer;
-   
-  }
-  
-  .chat-messages {
-    padding: 0 10px;
-    overflow-y: auto;
-    max-height: 200px;
-   
-  }
-  
-  .message {
-    margin-bottom: 10px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    display: inline-block;
-    max-width: 80%;
-    background-color: #F6F6F6;
-    
-  }
-  
-  .user-message {
-    background-color: #F6F6F6;
-    float: right;
-  }
-  
-  .bot-message {
-    background-color: #F6F6F6;
-    float: left;
-  }
-  
-  .chat-input-container {
-    display: flex;
-    border-top: 1px solid #ddd;
-  }
-  
-  .chat-input {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    outline: none;
-  }
-  
-  .send-icon {
-    padding: 10px;
-    background-color: #93ACC2;
-    color: #00263D;
-    cursor: pointer;
   }
 
-  @media(min-width:600px){
-
-    .flex{
-      display: flex;
-      flex-direction: row;
-      gap: 60px;
-      margin-left: -40px;
-    }
-    
-    .header_icons {
-      margin-top: 95px;
-      text-decoration: none;
-     
-    }
-  
-    .header_icon {
-      width: 65px;
-      height: 65px;
-    }
-  
-    .header_icon {
-      padding: 15px;
-      background-color: #CBB391;
-      border-radius: 25px;
-    }
-  
-    .header_icons h3 {
-      text-align: center;
-      text-decoration: none;
-      color: #F6F6F6;
-      margin-top: 10px;
-      font-size: 20px;
-    }
+  .header_icons {
+    margin-top: 95px;
+    text-decoration: none;
   }
-  
-  @media(min-width:1000px){
-    .flex{
-      display: flex;
-      flex-direction: row;
-      gap: 110px;
-      justify-content: center;
-      
-    }
-  
-    
-    .header_icons {
-      margin-top: 95px;
-      text-decoration: none;
-     
-    }
-  
-    .header_icon {
-      width: 45px;
-      height: 45px;
-    }
-  
-    .header_icon {
-      padding: 20px;
-      background-color: #CBB391;
-      border-radius: 25px;
-    }
-  
-    .header_icons h3 {
-      text-align: center;
-      text-decoration: none;
-      color: #F6F6F6;
-      margin-top: 10px;
-      font-size: 22px;
-    }
 
+  .header_icon {
+    width: 45px;
+    height: 45px;
   }
+
+  .header_icon {
+    padding: 20px;
+    background-color: #cbb391;
+    border-radius: 25px;
+  }
+
+  .header_icons h3 {
+    text-align: center;
+    text-decoration: none;
+    color: #f6f6f6;
+    margin-top: 10px;
+    font-size: 22px;
+  }
+}
