--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 @import url("https://use.typekit.net/vzx3eow.css");
 * {
-
   margin: 0;
   padding: 0;
 }
@@ -10,11 +9,14 @@
   width: auto;
 }
 
-
+.profiel_foto{
+  height: 50px;
+  width: auto;
+}
 
 h1 {
   text-align: center;
-  color: #B95927;
+  color: #b95927;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
@@ -23,7 +25,7 @@ h1 {
 #slider-container {
   position: relative;
   overflow: hidden;
-  width: 1250px;
+  width: 100vw-10px;
   margin: 0 auto;
 }
 
@@ -33,8 +35,8 @@ h1 {
 }
 
 #slide img {
-  width: 1250px;
-  height: 600px;
+  width: 100%;
+  height: 75vh;
   object-fit: cover;
   object-position: center;
 }
@@ -44,14 +46,18 @@ h1 {
   bottom: -35px;
   left: 0;
   width: 100%;
-  color: black;
+  color: #00263D;
   padding: 5px 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 .slider-text h2 {
-  margin: 0;
+  margin: 0 0 0 10px;
+  color: #00263D;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: 24px;
 }
 
 #slider-nav {
@@ -70,8 +76,21 @@ h1 {
 }
 
 .slider-dot.active {
-  background-color: #333;
+  background-color: #00263D;
 }
 
+@media(min-width:400px){
+  #slider-container{
+    /* background-color: aquamarine; */
+  }
+  /* #slide img {
+    width: 75%;
+    height: 75vh;
+    object-fit: cover;
+    object-position: center;
+  } */
+}
 
+@media(min-width: 1000px){
 
+}
