--- a/styles/detailpagina2.css
+++ b/styles/detailpagina2.css
@@ -1,46 +1,46 @@
 @import url("https://use.typekit.net/vzx3eow.css");
 * {
-    margin: 0;
-    padding: 0;
-    
-  }
-
-  body{
-    overflow-x: hidden;
-  }
-
-  .artikels{
-    margin-bottom: 90px;
-  }
-
-  .artikel_div {
-    display: flex; 
-    align-items: center; 
-    margin-bottom: 20px; 
-    margin-top: 60px;
-    margin-right: 25px;
+  margin: 0;
+  padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
 
+.artikels {
+  margin-bottom: 90px;
+}
+
+.heart-icon {
+  width: 25px;
+  height: auto;
+}
+
+.artikel_div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 60px;
+  margin-right: 25px;
+}
 
 .article-content div {
-    flex: 1; 
-    margin-right: 40px;
+  flex: 1;
+  margin-right: 40px;
 }
 
 .text p {
-    margin-top: 15px;
-    font-size: 12px;
-    margin-bottom: 30px; 
-    font-weight: 300;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: normal;
-    color: #00263D;
+  margin-top: 15px;
+  font-size: 12px;
+  margin-bottom: 30px;
+  font-weight: 300;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+  color: #00263d;
 }
 
-
-.like-button  {
- 
+.like-button {
   position: absolute;
   top: 430px;
   left: 120px;
@@ -54,8 +54,7 @@
   max-width: 20px;
 }
 
-.like-button2  {
- 
+.like-button2 {
   position: absolute;
   top: 640px;
   left: 120px;
@@ -65,13 +64,11 @@
   max-width: 20px;
 }
 
-.like-button3  {
- 
+.like-button3 {
   position: absolute;
   top: 860px;
   left: 120px;
 }
-
 
 .like-btn {
   background: none;
@@ -79,138 +76,123 @@
   cursor: pointer;
 }
 
-.image{
+.image {
   width: 170px;
   margin-right: 10px;
 }
 
-.image img{
+.image img {
   width: 150px;
   margin-left: 15px;
-  
 }
 
-.article-content h2{
+.article-content h2 {
   font-size: 18px;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
-  color: #00263D;
+  color: #00263d;
 }
 
-.title p{
+.title p {
   font-size: 13px;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
-  color:rgb(0, 38, 61, 50%);
+  color: rgb(0, 38, 61, 50%);
 }
 
-.artikel_div a{
-    font-size: 15px;
-    font-weight: 400;
-    font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: normal;
-    text-decoration: none;
-    background-color: #CBB391;
-    color: #00263D;
-    padding: 10px 35px;
-    border-radius: 30px;
-    margin-right: 225px;
-  
-    
+.artikel_div a {
+  font-size: 15px;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+  text-decoration: none;
+  background-color: #cbb391;
+  color: #00263d;
+  padding: 10px 35px;
+  border-radius: 30px;
+  margin-right: 25px;
+}
+.bekijk {
+  display: flex;
+  align-items: center;
 }
 
-@media(min-width:600px){
-  .image{
-    
+@media (min-width: 600px) {
+  .image {
     margin-right: 90px;
   }
 
-  .image img{
+  .image img {
     margin-top: 20px;
     width: 180px;
     margin-left: 50px;
   }
 
   .text p {
-   
     font-size: 14px;
-    
   }
 
-  .article-content h2{
+  .article-content h2 {
     font-size: 20px;
-    
   }
 
-  .like-button  {
- 
+  .like-button {
     position: absolute;
     top: 420px;
     left: 150px;
   }
 
-  .like-button2  {
-   
+  .like-button2 {
     position: absolute;
     top: 690px;
     left: 150px;
   }
-  
-  .like-button3  {
-   
+
+  .like-button3 {
     position: absolute;
     top: 950px;
     left: 150px;
   }
-
 }
 
-@media(min-width: 1000px){
-  .image{
-    
+@media (min-width: 1000px) {
+  .image {
     margin-right: 340px;
   }
 
-  .image img{
+  .image img {
     margin-top: 20px;
     width: 230px;
     margin-left: 240px;
   }
 
   .text p {
-   
     font-size: 15px;
-    
   }
 
-  .article-content h2{
+  .article-content h2 {
     font-size: 22px;
-    
   }
 
   .article-content div {
-  
     margin-right: 190px;
   }
 
-  .like-button  {
- 
+  .like-button {
     position: absolute;
     top: 420px;
     left: 190px;
   }
 
-  .like-button2  {
-   
+  .like-button2 {
     position: absolute;
     top: 740px;
     left: 190px;
   }
-  
-  .like-button3  {
-   
+
+  .like-button3 {
     position: absolute;
     top: 1050px;
     left: 190px;
@@ -225,7 +207,4 @@
   .like-button3 img {
     max-width: 25px;
   }
-  
-
 }
-
