--- a/styles/header.css
+++ b/styles/header.css
@@ -93,42 +93,51 @@
   border-radius: 25px;
 }
 
+
+
+
+
+
 .chat-container {
-  width: 200px;
+  width: 250px;
   margin: 20px auto;
   background-color: #93acc2;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   position: absolute;
-  top: 290px;
+  top: 250px;
   right: 20px;
+  z-index: 1;
 }
 
 .chat-header {
-  background-color: #93acc2;
-  color: #00263d;
+  /* background-color: #93acc2;
+  color: #00263d; */
   padding: 5px 10px;
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: 400;
+  /* font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
+  z-index: 0; */
 }
 
 .chat-header svg {
-  margin-right: -75px;
+  margin-right: -50px;
   margin-left: 25px;
-  cursor: pointer;
+  /* cursor: pointer; */
+  /* z-index: 0; */
 }
 
 .chat-messages {
-  padding: 0 10px;
+  padding: 0 5px;
   overflow-y: auto;
   max-height: 200px;
+  z-index: 0;
 }
 
 .message {
@@ -138,39 +147,52 @@
   display: inline-block;
   max-width: 80%;
   background-color: #f6f6f6;
+  z-index: 0;
+  font-size: 14px;
 }
 
 .user-message {
   background-color: #f6f6f6;
   float: right;
+  z-index: 0;
 }
 
 .bot-message {
   background-color: #f6f6f6;
   float: left;
+  z-index: 0;
 }
 
 .chat-input-container {
   display: flex;
-  border-top: 1px solid #ddd;
+  /* border-top: 1px solid #ddd; */
+  z-index: 0;
 }
 
 .chat-input {
   flex: 1;
-  padding: 10px;
+  /* padding: 5px 0px 5px 5px; */
+  padding-left: 7px;
   border: none;
   outline: none;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
-  font-style: 16px;
+  font-style: 12px;
+  z-index: 0;
+  /* width: 150px; */
+  color:#00263d;
+  font-size: 14px;
+  
 }
 
 .send-icon {
-  padding: 10px;
+  padding: 5px;
   background-color: #93acc2;
   color: #00263d;
   cursor: pointer;
+  z-index: 0;
 }
+
 
 @media (min-width: 600px) {
   .flex {
@@ -179,22 +201,26 @@
     gap: 60px;
     margin-left: -40px;
     /* margin: 0 auto; */
+    z-index: 0;
   }
 
   .header_icons {
     margin-top: 95px;
     text-decoration: none;
+    z-index: 0;
   }
 
   .header_icon {
     width: 65px;
     height: 65px;
+    z-index: 0;
   }
 
   .header_icon {
     padding: 15px;
     background-color: #cbb391;
     border-radius: 25px;
+    z-index: 0;
   }
 
   .header_icons h3 {
@@ -203,6 +229,7 @@
     color: #f6f6f6;
     margin-top: 10px;
     font-size: 20px;
+    z-index: 0;
   }
 }
 
@@ -212,22 +239,26 @@
     flex-direction: row;
     gap: 110px;
     justify-content: center;
+    z-index: 0;
   }
 
   .header_icons {
     margin-top: 95px;
     text-decoration: none;
+    z-index: 0;
   }
 
   .header_icon {
     width: 45px;
     height: 45px;
+    z-index: 0;
   }
 
   .header_icon {
     padding: 20px;
     background-color: #cbb391;
     border-radius: 25px;
+    z-index: 0;
   }
 
   .header_icons h3 {
@@ -236,5 +267,6 @@
     color: #f6f6f6;
     margin-top: 10px;
     font-size: 22px;
+    z-index: 0;
   }
 }
