--- a/styles/profiel.css
+++ b/styles/profiel.css
@@ -3,7 +3,7 @@
   font-family: "neue-haas-grotesk-text", sans-serif;
 }
 .kader {
-  border: 1px #b95927 solid;
+  border: 1px #00263D solid;
   border-radius: 10px;
   padding: 10px 15px;
   display: flex;
@@ -30,6 +30,17 @@
   color: #b95927;
 }
 
+h1{
+  text-align: left;
+  color: #b95927;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
 h2 {
   color: #00263d;
 }
@@ -48,6 +59,11 @@ h2 {
   margin-right: 10px; /* Optioneel, voeg marges toe naar keuze */
 }
 
+.profiel_foto img{
+  width: 90px;
+}
+
+
 .button {
   padding: 7px 14px;
   display: inline-block;
@@ -65,3 +81,5 @@ h2 {
   justify-content: center;
   margin-top: 20px;
 }
+
+
