--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,14 @@ h1 {
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 #slider-container {
   position: relative;
   overflow: hidden;
-  width: 100vw-10px;
+  max-width: 90%;
   margin: 0 auto;
   z-index: -1;
 }
@@ -38,7 +40,7 @@ h1 {
 
 #slide img {
   width: 100%;
-  height: 75vh;
+  height: 35vh;
   object-fit: cover;
   object-position: center;
   z-index: -1;
@@ -61,6 +63,7 @@ h1 {
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: 24px;
+  margin-top: 30px;
 }
 
 #slider-nav {
@@ -82,10 +85,15 @@ h1 {
   background-color: #00263D;
 }
 
+
 @media(min-width:600px){
   #slider-container{
     /* background-color: aqua; */
     width: 95%;
+  }
+
+  #slide img{
+    height: 40vh;
   }
 }
 
@@ -93,5 +101,9 @@ h1 {
   #slider-container{
     /* background-color: aqua; */
     width: 75%;
+  }
+
+  #slide img{
+    height: 80vh;
   }
 }
