--- a/styles/profiel.css
+++ b/styles/profiel.css
@@ -56,7 +56,8 @@ h2 {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  margin-right: 10px; /* Optioneel, voeg marges toe naar keuze */
+  margin-right: 10px; 
+  margin-top: -20px;
 }
 
 .profiel_foto img{
@@ -80,6 +81,27 @@ h2 {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 29px;
 }
 
+.info{
+  color: #00263D;
+  margin-left: 20px;
+}
+
+.email{
+  color: rgb(0, 38, 61, 50%);
+}
+
+@media(min-width:1000px){
+
+  .kader-header{
+   margin-left: 40px; 
+  }
+
+  .kader-inhoud{
+    margin-left: 50px;
+  }
+  
+}
 
