--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "neue-haas-grotesk-text", sans-serif;
 }
 
 #logo {
@@ -24,6 +25,10 @@ h1 {
   margin-bottom: 50px;
 }
 
+h3{
+  color: #00263D;
+}
+
 #slider-container {
   position: relative;
   overflow: hidden;
@@ -36,6 +41,7 @@ h1 {
   position: relative;
   width: 100%;
   z-index: -1;
+  
 }
 
 #slide img {
