--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -8,13 +8,20 @@ body {
 }
 
 .chat-container {
-    width: 300px;
+    width: 250px;
     margin-top: 120px;
     background-color: #93ACC2;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: fixed ;
 }
+
+h3{
+    color: #00263D;
+    font-size: 16px;
+  }
+  
 
 .chat-header {
     background-color: #93ACC2;
