--- a/styles/header.css
+++ b/styles/header.css
@@ -2,10 +2,9 @@
 
 .header {
   background-color: #00263d;
-  height: 32vh;
+  height: 25vh;
   display: flex;
   justify-content: space-around;
-  padding: 0px 20%;
   position: relative;
   margin-bottom: 30px;
 }
@@ -34,8 +33,8 @@
 .flex {
   display: flex;
   flex-direction: row;
-  gap: 20px;
-  margin-left: -70px;
+  gap: 40px;
+  justify-content: center;
 }
 
 .header_icons h3 {
@@ -79,7 +78,7 @@
 }
 
 .header_icons {
-  margin-top: 95px;
+  margin-top: 59px;
   text-decoration: none;
 }
 
@@ -101,20 +100,18 @@
     display: flex;
     flex-direction: row;
     gap: 60px;
-    margin-left: -40px;
-    /* margin: 0 auto; */
     z-index: 0;
   }
 
   .header_icons {
-    margin-top: 95px;
+    margin-top: 55px;
     text-decoration: none;
     z-index: 0;
   }
 
   .header_icon {
-    width: 65px;
-    height: 65px;
+    width: 55px;
+    height: 55px;
     z-index: 0;
   }
 
@@ -136,16 +133,19 @@
 }
 
 @media (min-width: 1000px) {
+
+  .header{
+    height: 28vh ;
+  }
   .flex {
     display: flex;
     flex-direction: row;
     gap: 110px;
-    justify-content: center;
-    z-index: 0;
+  
   }
 
   .header_icons {
-    margin-top: 95px;
+    margin-top: 65px;
     text-decoration: none;
     z-index: 0;
   }
