--- a/styles/chatbot.css
+++ b/styles/chatbot.css
@@ -16,7 +16,7 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: fixed;
     right: 20px; 
-    top: 200px; 
+    top: 180px; 
     z-index: 1000; 
 }
 
@@ -63,7 +63,7 @@ h3 {
 }
 
 .bot-message {
-    background-color: #fff;
+    background-color: #f6f6f6;
     float: left;
 }
 
@@ -73,10 +73,12 @@ h3 {
 }
 
 .chat-input {
-    flex: 1; /* Make the input take up available space */
-    padding: 10px; /* Add padding for better appearance */
+    flex: 1; 
+    padding: 10px; 
     border: none;
     outline: none;
+    color: #000;
+    
 }
 
 .send-icon {
@@ -84,4 +86,14 @@ h3 {
     background-color: #93ACC2;
     color: #00263D;
     cursor: pointer;
+}
+
+@media (min-width: 1000px) {
+.chat-container {
+   
+    right: 20px; 
+    top: 200px; 
+    z-index: 1000; 
+}
+
 }
