--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ h1 {
   margin-bottom: 50px;
 }
 
-#slider-container {
+.slider-container {
   position: relative;
   overflow: hidden;
   max-width: 90%;
@@ -35,14 +35,14 @@ h1 {
   
 }
 
-#slide {
+.slide {
   position: relative;
   width: 100%;
   z-index: -1;
   
 }
 
-#slide img {
+.slide img {
   width: 100%;
   height: 35vh;
   object-fit: cover;
@@ -52,26 +52,26 @@ h1 {
 }
 
 .slider-text {
-  position: absolute;
+  /* position: absolute;
   bottom: -35px;
-  left: 0;
+  left: 0; */
   width: 100%;
   color: #00263D;
-  padding: 5px 0;
+  /* padding: 5px 0; */
   margin: 0;
   box-sizing: border-box;
 }
 
 .slider-text h2 {
-  margin: 0 0 0 10px;
+  /* margin: 0 0 0 10px; */
   color: #00263D;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: 24px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
-#slider-nav {
+.slider-nav {
   margin-top: 35px;
   margin-left: 45%;
 }
@@ -184,11 +184,11 @@ a:hover{
 }
 
 @media(min-width:600px){
-  #slider-container{
+  .slider-container{
     width: 95%;
   }
 
-  #slide img{
+  .slide img{
     height: 40vh;
   }
 
@@ -234,12 +234,12 @@ a:hover{
 }
 
 @media(min-width: 900px){
-  #slider-container{
+  .slider-container{
     margin-top: 60px;
     width: 55%;
   }
 
-  #slide img{
+  .slide img{
     height: 45vh;
   }
 
