--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   width: auto;
 }
 
-.profiel_foto{
+.profiel_foto {
   height: 50px;
   width: auto;
 }
@@ -30,16 +30,29 @@ h1 {
   overflow: hidden;
   max-width: 90%;
   margin: 20px auto;
-  z-index: -1;
   margin-top: 110px;
-  
 }
-
+.slider-controls {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  /* top: 50%;
+  transform: translateY(-50%); */
+  bottom: 10px;
+  left: 0;
+}
+.slide-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 .slide {
   position: relative;
   width: 100%;
-  z-index: -1;
-  
 }
 
 .slide img {
@@ -47,28 +60,22 @@ h1 {
   height: 35vh;
   object-fit: cover;
   object-position: center;
-  z-index: -1;
   border-radius: 50px;
 }
 
 .slider-text {
-  /* position: absolute;
-  bottom: -35px;
-  left: 0; */
   width: 100%;
-  color: #00263D;
-  /* padding: 5px 0; */
+  color: #00263d;
   margin: 0;
   box-sizing: border-box;
 }
 
 .slider-text h2 {
-  /* margin: 0 0 0 10px; */
-  color: #00263D;
+  color: #00263d;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
-  font-style: 24px;
-  margin-top: 10px;
+  font-size: 24px;
+  margin-top: 0;
 }
 
 .slider-nav {
@@ -90,6 +97,21 @@ h1 {
   background-color: #333;
 }
 
+#prev,
+#next {
+  cursor: pointer;
+  width: 20px;
+  height: auto;
+}
+
+#prev {
+  left: 10px;
+}
+
+#next {
+  right: 10px;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
@@ -99,96 +121,94 @@ h1 {
 
 .flex1 {
   flex: 1;
-  margin-right: 10px; 
+  margin-right: 10px;
 }
+
 .title h3 {
-  color: #00263D;
+  color: #00263d;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
-  font-style: 13px;
+  font-size: 13px;
   margin-top: 90px;
 }
-p{
-  color: #00263D;
+
+p {
+  color: #00263d;
   font-weight: 100;
   font-family: "neue-haas-grotesk-text", sans-serif;
-  font-style: 8px;
+  font-size: 8px;
   margin-top: 10px;
 }
 
-/* img{
-  margin-bottom: 10px;
-} */
-
 .flex2 div {
-  margin-bottom: 20px; 
-  
+  margin-bottom: 20px;
 }
 
-.image3{
+.image3 {
   width: 220px;
   height: 400px;
 }
 
-.image1{
+.image1 {
   width: 230px;
 }
 
-.image2{
+.image2 {
   width: 230px;
 }
 
-.image4{
+.image4 {
   width: 220px;
   height: 280px;
 }
 
 .flex4 {
   flex: 4;
-  margin-right: 10px; 
-}
-.flex3 div {
-  margin-bottom: 20px; 
+  margin-right: 10px;
 }
 
-.flex3{
+.flex3 div {
+  margin-bottom: 20px;
+}
+
+.flex3 {
   margin-right: 5px;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-a:hover{
-  color: #CBB391;
+a:hover {
+  color: #cbb391;
 }
 
-/*balkjes*/
-.containerbalk{
+/* balkjes */
+.containerbalk {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
 
-.balk{
+.balk {
   height: 5px;
   width: 100%;
 }
 
-.balkje1{
-  background-color: #B95927;
+.balkje1 {
+  background-color: #b95927;
 }
 
-.balkje2{
-  background-color: #CBB391;
+.balkje2 {
+  background-color: #cbb391;
 }
 
-@media(min-width:600px){
-  .slider-container{
+@media (min-width: 600px) {
+  .slider-container {
     width: 95%;
   }
 
-  .slide img{
+  .slide img {
     height: 40vh;
   }
 
@@ -196,100 +216,100 @@ a:hover{
     display: flex;
     justify-content: space-between;
   }
-  
+
   .flex1 {
     flex: 1;
-    margin-right: 20px; 
+    margin-right: 20px;
   }
-  
+
   .flex2 {
     display: flex;
     flex-direction: column;
     flex: 1;
     margin-right: 30px;
   }
-  
+
   .flex2 div {
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
   }
 
-  .image3{
+  .image3 {
     width: 320px;
     height: 460px;
   }
-  
-  .image1{
+
+  .image1 {
     width: 400px;
   }
-  
-  .image2{
+
+  .image2 {
     width: 400px;
   }
-  
-  .image4{
+
+  .image4 {
     width: 320px;
     height: 400px;
   }
-  
 }
 
-@media(min-width: 900px){
-  .slider-container{
+@media (min-width: 900px) {
+  .slider-container {
     margin-top: 60px;
     width: 55%;
   }
 
-  .slide img{
+  .slide img {
     height: 45vh;
   }
 
   .flex1 {
     flex: 1;
-    margin-right: 20px; 
+    margin-right: 20px;
     margin-left: 80px;
   }
-  
+
   .flex2 {
     display: flex;
     flex-direction: column;
     flex: 1;
     margin-right: 80px;
   }
-  
+
   .flex2 div {
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
   }
 
-  .image3{
+  .image3 {
     width: 520px;
     height: 460px;
   }
-  
-  .image1{
+
+  .image1 {
     width: 700px;
   }
-  
-  .image2{
+
+  .image2 {
     width: 700px;
   }
-  
-  .image4{
+
+  .image4 {
     width: 420px;
     height: 400px;
   }
 
   .title h3 {
-    color: #00263D;
+    color: #00263d;
     font-weight: 700;
     font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: 24px;
+    font-size: 24px;
     margin-top: 90px;
   }
-  p{
-    color: #00263D;
+
+  p {
+    color: #00263d;
     font-weight: 100;
     font-family: "neue-haas-grotesk-text", sans-serif;
-    font-style: 13px;
+    font-size: 13px;
     margin-top: 10px;
   }
 }
