--- a/styles/detailpagina2.css
+++ b/styles/detailpagina2.css
@@ -1,4 +1,5 @@
 @import url("https://use.typekit.net/vzx3eow.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -10,22 +11,39 @@ body {
 
 .artikels {
   margin-bottom: 90px;
-}
-
-.heart-icon {
-  /* width: 25px;
-  height: auto; */
+  margin-top: 130px;
 }
 
 .artikel_div {
   display: flex;
   align-items: center;
+  position: relative;
   margin-bottom: 20px;
   margin-top: 60px;
-  margin-right: 25px;
+  margin-left: 20px;
 }
 
-.article-content div {
+.image {
+  position: relative; 
+  margin-right: 20px;
+}
+
+.artikel_foto {
+  width: 150px;
+  margin-left: 15px;
+}
+
+.heart-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px; 
+  height: auto;
+  cursor: pointer;
+  z-index: 1; 
+}
+
+.article-content {
   flex: 1;
   margin-right: 40px;
 }
@@ -40,34 +58,12 @@ body {
   color: #00263d;
 }
 
-.like-button {
+.like-button, .like-button2, .like-button3 {
   position: absolute;
-  top: 430px;
-  left: 120px;
 }
 
-.like-button img {
+.like-button img, .like-button2 img, .like-button3 img {
   max-width: 20px;
-}
-
-.like-button2 img {
-  max-width: 20px;
-}
-
-.like-button2 {
-  position: absolute;
-  top: 640px;
-  left: 120px;
-}
-
-.like-button3 img {
-  max-width: 20px;
-}
-
-.like-button3 {
-  position: absolute;
-  top: 860px;
-  left: 120px;
 }
 
 .like-btn {
@@ -76,18 +72,8 @@ body {
   cursor: pointer;
 }
 
-.image {
-  width: 170px;
-  margin-right: 10px;
-}
-
-.image img {
-  width: 150px;
-  margin-left: 15px;
-}
-
 .article-content h2 {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
@@ -95,11 +81,11 @@ body {
 }
 
 .title p {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   font-family: "neue-haas-grotesk-text", sans-serif;
   font-style: normal;
-  color: rgb(0, 38, 61, 50%);
+  color: rgba(0, 38, 61, 0.5);
 }
 
 .artikel_div a {
@@ -114,18 +100,14 @@ body {
   border-radius: 30px;
   margin-right: 25px;
 }
+
 .bekijk {
   display: flex;
   align-items: center;
 }
 
 @media (min-width: 600px) {
-  .image {
-    margin-right: 90px;
-  }
-
-  .image img {
-    margin-top: 20px;
+  .artikel_foto  {
     width: 180px;
     margin-left: 50px;
   }
@@ -139,19 +121,16 @@ body {
   }
 
   .like-button {
-    position: absolute;
     top: 420px;
     left: 150px;
   }
 
   .like-button2 {
-    position: absolute;
     top: 690px;
     left: 150px;
   }
 
   .like-button3 {
-    position: absolute;
     top: 950px;
     left: 150px;
   }
@@ -159,10 +138,10 @@ body {
 
 @media (min-width: 1000px) {
   .image {
-    margin-right: 340px;
+    margin-right: 60px;
   }
 
-  .image img {
+  .artikel_foto {
     margin-top: 20px;
     width: 230px;
     margin-left: 240px;
@@ -181,30 +160,25 @@ body {
   }
 
   .like-button {
-    position: absolute;
     top: 420px;
     left: 190px;
   }
 
   .like-button2 {
-    position: absolute;
     top: 740px;
     left: 190px;
   }
 
   .like-button3 {
-    position: absolute;
     top: 1050px;
     left: 190px;
   }
 
-  .like-button img {
+  .like-button img, .like-button2 img, .like-button3 img {
     max-width: 25px;
   }
-  .like-button2 img {
-    max-width: 25px;
-  }
-  .like-button3 img {
-    max-width: 25px;
+
+  .heart-icon{
+    top: 30px;
   }
 }
