--- a/styles/begroting.css
+++ b/styles/begroting.css
@@ -14,11 +14,18 @@ h1{
     margin-bottom: 50px;
 }
 
-.begroting img{
+
+.begroting {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0; 
+  }
+  
+  .begroting img {
     width: 90%;
     border-radius: 20px;
-    margin-left: 20px;
-}
+  
+  }
 
 h2{
     color: #00263D;
@@ -38,6 +45,7 @@ p{
     font-size: 14px;
     margin-left: 20px;
     margin-right: 20px;
+    line-height: 20px;
 }
 
 a{
@@ -45,6 +53,8 @@ a{
     color: #00263D;
 
 }
+
+
 
 .video{
     width: 400px;
@@ -76,14 +86,14 @@ a{
 
 .flex {
     display: flex;
-    flex-direction: column; /* Verticale weergave van items */
+    flex-direction: column; 
 }
 
 .item {
     display: flex;
     flex-direction: column;
-    align-items: left; /* Centreren van inhoud in elk item */
-    margin-bottom: 20px; /* Ruimte tussen items */
+    align-items: left; 
+    margin-bottom: 20px; 
     margin-left: 20px;
 }
 
@@ -97,18 +107,19 @@ a{
 }
 
 @media (min-width: 768px) {
-    /* Op tablet en grotere schermen */
+  
     .flex {
-        flex-direction: row; /* Horizontale weergave van items */
-        justify-content: left; /* Centreren van items in de rij */
+        flex-direction: row; 
+        justify-content: left; 
         margin-bottom: 40px;
     }
 
     .item {
-        margin-right: 20px; /* Ruimte tussen items op tablet en grotere schermen */
+        margin-right: 20px; 
     }
 
     .begroting img{
+        width: 80%;
         margin-left: 40px;
     }
 
@@ -127,13 +138,36 @@ a{
     .begroting img{
         width: 60%;
         height:50%;
-        margin-left: 350px;
+    
     }
 
     p{
-        margin-right: 180px;
+        margin-right: 80px;
+        margin-left: 60px;
+        font-size: 16px;
+        line-height: 22px;
     }
 
+    h2{
+        margin-left: 60px;
+    }
+
+  
+    .imgbegroting{
+        margin-left: 60px;
+    }
+
+    .video{
+        margin-left: 60px;
+    }
+
+    .item a{
+        margin-left: 60px;
+    }
+
+    .totstand a{
+        margin-left: 60px;
+    }
 }
 
 
