--- a/styles/verkiezingen.css
+++ b/styles/verkiezingen.css
@@ -14,10 +14,16 @@ h1 {
   margin-bottom: 50px;
 }
 
+.verkiezingen {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0; 
+}
+
 .verkiezingen img {
   width: 90%;
   border-radius: 20px;
-  margin-left: 20px;
+
 }
 
 h2 {
@@ -30,6 +36,13 @@ h2 {
   margin-left: 20px;
 }
 
+h3{
+  color: #00263d;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+}
+
 p {
   color: #00263d;
   font-weight: 400;
@@ -38,6 +51,7 @@ p {
   font-size: 14px;
   margin-left: 20px;
   margin-right: 20px;
+  line-height: 20px;
 }
 
 a {
@@ -58,9 +72,11 @@ a {
   margin-left: 20px;
 }
 
-.totstand img {
+.stemmen img {
   width: 400px;
   margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .flex {
@@ -74,14 +90,14 @@ a {
 
 .flex {
   display: flex;
-  /* Verticale weergave van items */
+ 
 }
 
 .item {
   display: flex;
   flex-direction: column;
-  align-items: left; /* Centreren van inhoud in elk item */
-  margin-bottom: 20px; /* Ruimte tussen items */
+  align-items: left; 
+  margin-bottom: 20px; 
   margin-left: 20px;
 }
 
@@ -104,22 +120,34 @@ a {
 .partij {
   margin: 50px 20px;
 }
-.niveau {
-  /* margin-left: 50px; */
+.niveau{
+  color: #00263d;
+  font-weight: 400;
+  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-style: normal;
+  font-size: 14px;
 }
 .niveau li {
   margin-left: 20px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  line-height: 20px;
+
+}
+
+.top{
+  margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  /* Op tablet en grotere schermen */
+  
   .flex {
-    flex-direction: row; /* Horizontale weergave van items */
-    justify-content: left; /* Centreren van items in de rij */
+    flex-direction: row; 
+    justify-content: left; 
     margin-bottom: 40px;
   }
 
   .item {
-    margin-right: 20px; /* Ruimte tussen items op tablet en grotere schermen */
+    margin-right: 20px; 
   }
 
   .verkiezingen img {
@@ -136,13 +164,60 @@ a {
 }
 
 @media (min-width: 1000px) {
-  .verkiezingen img {
+  .verkiezingen img{
     width: 60%;
-    height: 50%;
-    margin-left: 350px;
+    height:50%;
+
+}
+
+  p{
+    margin-right: 80px;
+    margin-left: 60px;
+    font-size: 16px;
+    line-height: 22px;
+}
+
+h2{
+    margin-left: 60px;
+}
+
+
+.imgverkiezingen{
+    margin-left: 60px;
+}
+
+.video{
+    margin-left: 60px;
+}
+
+.item a{
+    margin-left: 60px;
+}
+
+.stemmen{
+  margin-left: 50px;
+}
+
+.totstand a{
+    margin-left: 60px;
+}
+
+  .niveau{
+    font-size: 19px;
+    margin-left: 90px;
+    
   }
 
-  p {
-    margin-right: 180px;
+  .niveau li{
+    font-size: 16px;
+    
+  }
+
+  h3{
+    margin-left: 90px;
+  }
+
+  .partij_logo{
+    margin-left: 90px;
   }
 }
